fix move task button shift on mobile device

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -5,3 +5,4 @@ $background-column-header: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.o
 $header-min-height: 6rem;
 $padding-pomodoro-heading: 1rem 0;
 $background-close-button: rgba(255, 0, 0, 0.4);
+$button-width: 85px;
